--- a/backend/package.json
+++ b/backend/package.json
@@ -1,4 +1,7 @@
 {
+  "scripts": {
+    "start": "nodemon server.js"
+  },
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.3",
@@ -8,6 +11,8 @@
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
     "mssql": "^11.0.1",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "nodemon": "^3.1.7",
+    "sequelize": "^6.37.5"
   }
 }
